tests/machine/x/go/partial_application.error
run error: exit status 1
# command-line-arguments
tests/machine/x/go/partial_application.go:15:17: cannot use func(p0 int) int {…} (value of type func(p0 int) int) as int value in variable declaration
tests/machine/x/go/partial_application.go:16:14: invalid operation: cannot call non-function add5 (variable of type int)
